--- a/students.html
+++ b/students.html
@@ -11,7 +11,7 @@
 <header class="topbar">
   <div class="container nav">
     <div class="brand">
-      <div class="brand-badge">س</div> سكن أفندي
+      <div class="brand-badge">🏠</div> سكن أفندي
     </div>
     <nav class="menu">
       <a href="index.html">الرئيسية</a>
