--- a/commercial.html
+++ b/commercial.html
@@ -13,14 +13,16 @@
     <div class="brand">
       <div class="brand-badge">🏠</div> سكن أفندي
     </div>
-    <nav class="menu">
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+    <nav class="menu" id="menu">
       <a href="index.html">الرئيسية</a>
-      <a href="apartments.html"> شقق</a>
-      <a href="students.html">سكن طلاب</a>
+      <a href="apartments.html">شقق</a>
       <a href="villas.html">اراضي</a>
+      <a href="commercial.html">محلات</a>
     </nav>
   </div>
 </header>
+
 
 <!-- نفس كودك الأساسي -->
 
@@ -235,4 +237,9 @@ function applyFilters() {
     card.style.display = show ? "block" : "none";
   });
 }
+</script>
+<script>
+  function toggleMenu() {
+    document.getElementById("menu").classList.toggle("active");
+  }
 </script>
