--- a/apartments.html
+++ b/apartments.html
@@ -16,7 +16,7 @@
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     <nav class="menu" id="menu">
       <a href="index.html">الرئيسية</a>
-      <a href="apartments.html">شقق</a>
+      <a href="students.html">سكن طلبه</a>
       <a href="villas.html">اراضي</a>
       <a href="commercial.html">محلات</a>
     </nav>
