--- a/commercial.html
+++ b/commercial.html
@@ -18,7 +18,7 @@
       <a href="index.html">الرئيسية</a>
       <a href="apartments.html">شقق</a>
       <a href="villas.html">اراضي</a>
-      <a href="commercial.html">محلات</a>
+      <a href="students.html">سكن طلبه</a>
     </nav>
   </div>
 </header>
