--- a/villas.html
+++ b/villas.html
@@ -17,7 +17,7 @@
     <nav class="menu" id="menu">
       <a href="index.html">الرئيسية</a>
       <a href="apartments.html">شقق</a>
-      <a href="villas.html">اراضي</a>
+      <a href="students.html">سكن طلبه</a>
       <a href="commercial.html">محلات</a>
     </nav>
   </div>
