--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>واجهة حديثة لشركة عقارات</title>
+  <title>  شركة عقارات</title><title>سكن أفندي | شقق للإيجار والبيع</title>
+<meta name="description" content="سكن أفندي يوفر أفضل العروض للشقق للإيجار والبيع بمواقع مميزة وأسعار مناسبة. اكتشف شقتك المثالية الآن.">
+<meta name="keywords" content="شقق, شقق للإيجار, شقق للبيع, سكن أفندي, سكن, عقارات">
+<meta name="author" content="سكن أفندي">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">
