تحديث الكود وإضافة إعلانات

--- a/commercial.html
+++ b/commercial.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>محلات - سكن أفندي</title>
   <link rel="stylesheet" href="style.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5576405028824306"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -16,9 +18,15 @@
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     <nav class="menu" id="menu">
       <a href="index.html">الرئيسية</a>
-      <a href="apartments.html">شقق</a>
-      <a href="villas.html">اراضي</a>
+      <a href="apartments.html">الشقق</a>
       <a href="students.html">سكن طلبه</a>
+      <a href="villas.html">اراضي</a>
+      <a href="commercial.html">محلات</a>
+      <a href="car.html">سيارات</a>
+      <a href="Foodstuffs.html">المواد الغذائيه</a>
+      <a href="Devices.html">الاجهزه الكهربائية</a>
+      <a href="clothes.html"> الملابس</a>
+      <a href="Medical.html"> المستلزمات الطبيه</a>
     </nav>
   </div>
 </header>
