--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>  شركة عقارات</title><title>سكن أفندي | شقق للإيجار والبيع</title>
+  <title>   سكن افندي</title><title>سكن أفندي | شقق للإيجار والبيع</title>
 <meta name="description" content="سكن أفندي يوفر أفضل العروض للشقق للإيجار والبيع بمواقع مميزة وأسعار مناسبة. اكتشف شقتك المثالية الآن.">
 <meta name="keywords" content="شقق, شقق للإيجار, شقق للبيع, سكن أفندي, سكن, عقارات">
 <meta name="author" content="سكن أفندي">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5576405028824306"
+     crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5576405028824306"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -23,8 +26,8 @@
       <span> سكن افندي</span>
     </a>
     <nav id="mainMenu" class="menu">
-  <a href="#categories">الأقسام</a>
-  <a href="#featured">العقارات</a>
+  <a href="#categories">الي عايزه ف اسيوط</a>
+  <a href="#featured">العروض</a>
   <a href="#about">عن الشركة</a>
   <a href="#contact">تواصل</a>
   <a href="https://wa.me/201097919027?text=مرحباً%20أريد%20ان اعلن%20عن%20شقق" target="_blank" style="color:green; font-weight:bold;">
@@ -53,7 +56,7 @@
       <div class="hero-card">
         <form onsubmit="event.preventDefault(); document.getElementById('featured').scrollIntoView({behavior:'smooth'});">
           <div style="display:grid;grid-template-columns:2fr 1fr 1fr;gap:10px">
-            <input aria-label="ابحث بالموقع أو العنوان" placeholder="ابحث  بالمكان او المدينه أو العنوان" style="padding:12px;border-radius:12px;border:1px solid #1b2948;background:#0b1220;color:#e5e7eb">
+            <input aria-label="ابحث بالموقع أو العنوان" placeholder="ابحث ع الي انت عايزه" style="padding:12px;border-radius:12px;border:1px solid #1b2948;background:#0b1220;color:#e5e7eb">
             <select aria-label="النوع" style="padding:12px;border-radius:12px;border:1px solid #1b2948;background:#0b1220;color:#e5e7eb">
               <option>الكل</option><option>شقة</option><option>سكن طلاب</option><option>اراضي</option><option> محلات</option>
             </select>
@@ -82,25 +85,55 @@
       <a class="cat reveal" href="apartments.html">
         <img src="https://images.unsplash.com/photo-1501183638710-841dd1904471?q=80&w=1400&auto=format&fit=crop" alt="شقق">
         <div class="overlay">
-          <div class="title"><b>شقق</b><span class="chip">استكشف →</span></div>
+          <div class="title"><b>بيوت وشقق للبيع والايجار</b><span class="chip">استكشف →</span></div>
         </div>
       </a>
       <a class="cat reveal" href="students.html">
-        <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?q=80&w=1400&auto=format&fit=crop" alt="سكن طلاب">
+        <img src="image/assiut-university-campus.png" alt="سكن طلاب">
         <div class="overlay">
-          <div class="title"><b>سكن طلاب</b><span class="chip">استكشف →</span></div>
+          <div class="title"><b>سكن طلاب جامعة اسيوط</b><span class="chip">استكشف →</span></div>
         </div>
       </a>
       <a class="cat reveal" href="villas.html">
-        <img src="https://images.unsplash.com/photo-1564013799919-ab600027ffc6?q=80&w=1400&auto=format&fit=crop" alt="اراضي">
+        <img src="image/images.jpg" alt="اراضي">
         <div class="overlay">
-          <div class="title"><b>اراضي</b><span class="chip">استكشف →</span></div>
+          <div class="title"><b>اراضي للبيع</b><span class="chip">استكشف →</span></div>
         </div>
       </a>
       <a class="cat reveal" href="commercial.html">
-        <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?q=80&w=1400&auto=format&fit=crop" alt="محلات">
+        <img src="image/download.jpg" alt="محلات">
         <div class="overlay">
           <div class="title"><b>محلات</b><span class="chip">استكشف →</span></div>
+        </div>
+      </a>
+      <a class="cat reveal" href="car.html">
+        <img src="image/معارض-السيارات-في-جدة-780x363.jpg" alt="السيارات">
+        <div class="overlay">
+          <div class="title"><b>السيارات</b><span class="chip">استكشف →</span></div>
+        </div>
+      </a>
+      <a class="cat reveal" href="Foodstuffs.html">
+        <img src="image/1020231914240757328260.jpg" alt="المواد الغذائيه">
+        <div class="overlay">
+          <div class="title"><b>المواد الغذائيه</b><span class="chip">استكشف →</span></div>
+        </div>
+      </a>
+            <a class="cat reveal" href="Medical.html">
+        <img src="image/outils-médicaux-en-français.jpg" alt="المستلزمات الطبيه">
+        <div class="overlay">
+          <div class="title"><b>المستلزمات الطبيه</b><span class="chip">استكشف →</span></div>
+        </div>
+      </a>
+                  <a class="cat reveal" href="clothes.html">
+        <img src="image/1692521042.jpg" alt=" ملابس">
+        <div class="overlay">
+          <div class="title"><b> ملابس</b><span class="chip">استكشف →</span></div>
+        </div>
+      </a>
+      <a class="cat reveal" href="Devices.html">
+        <img src="image/الأجهزة-الكهربائية.webp" alt="الاجهزه الكهربائيه">
+        <div class="overlay">
+          <div class="title"><b>الاجهزه الكهربائيه</b><span class="chip">استكشف →</span></div>
         </div>
       </a>
     </div>
@@ -110,7 +143,7 @@
 <!-- Featured Listings -->
 <section id="featured" class="section">
   <div class="container">
-    <h2 class="reveal">عقارات مميزة ف اسيوط</h2>
+    <h2 class="reveal"> العروض </h2>
     <div id="cards" class="grid" aria-live="polite"></div>
   </div>
 </section>
