تحديث الكود وإضافة إعلانات

--- a/commercial.html
+++ b/commercial.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>محلات - سكن أفندي</title>
+  <meta name="description" content="سكن أفندي يوفر أفضل العروض للشقق للإيجار والبيع بمواقع مميزة وأسعار مناسبة. بيقدم مواد غذائيه .">
+<meta name="keywords" content="شقق, شقق للإيجار,شقق للبيع,  مواد غذائيه,مستلزمات طبيه,عربيات للبيع, اجهزه كهريائيه, سكن أفندي, سكن, عقارات">
+<meta name="author" content="سكن أفندي">
   <link rel="stylesheet" href="style.css">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5576405028824306"
      crossorigin="anonymous"></script>
