--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>   سكن افندي</title><title>سكن أفندي | شقق للإيجار والبيع</title>
-<meta name="description" content="سكن أفندي يوفر أفضل العروض للشقق للإيجار والبيع بمواقع مميزة وأسعار مناسبة. اكتشف شقتك المثالية الآن.">
-<meta name="keywords" content="شقق, شقق للإيجار, شقق للبيع, سكن أفندي, سكن, عقارات">
+<meta name="description" content="سكن أفندي يوفر أفضل العروض للشقق للإيجار والبيع بمواقع مميزة وأسعار مناسبة. بيقدم مواد غذائيه .">
+<meta name="keywords" content="شقق, شقق للإيجار,شقق للبيع,  مواد غذائيه,مستلزمات طبيه,عربيات للبيع, اجهزه كهريائيه, سكن أفندي, سكن, عقارات">
 <meta name="author" content="سكن أفندي">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5576405028824306"
      crossorigin="anonymous"></script>
@@ -31,7 +31,7 @@
   <a href="#about">عن الشركة</a>
   <a href="#contact">تواصل</a>
   <a href="https://wa.me/201097919027?text=مرحباً%20أريد%20ان اعلن%20عن%20شقق" target="_blank" style="color:green; font-weight:bold;">
-    📢 إعلان عن شقق
+    📢 للاعلان  
   </a>
 </nav>
 
