--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 <!-- Header -->
 <header class="topbar">
   <div class="container nav">
-    <a href="#" class="brand" aria-label="الرئيسية">
-      <span class="brand-badge">🏠</span>
-      <span> سكن افندي</span>
-    </a>
+    <a href="index.html" class="brand">
+  <div class="brand-badge">🏠</div>
+  <span>سكن أفندي</span>
+</a>
+
     <nav id="mainMenu" class="menu">
   <a href="#categories">الي عايزه ف اسيوط</a>
   <a href="#featured">العروض</a>
@@ -116,6 +117,12 @@
         <img src="image/1020231914240757328260.jpg" alt="المواد الغذائيه">
         <div class="overlay">
           <div class="title"><b>المواد الغذائيه</b><span class="chip">استكشف →</span></div>
+        </div>
+      </a>
+      <a class="cat reveal" href="mobil.html">
+              <img src="image/mobil.jpg" alt=" موبايلات">
+        <div class="overlay">
+          <div class="title"><b>موبايلات </b><span class="chip">استكشف →</span></div>
         </div>
       </a>
             <a class="cat reveal" href="Medical.html">
