--- a/students.html
+++ b/students.html
@@ -15,9 +15,11 @@
 
 <header class="topbar">
   <div class="container nav">
-    <div class="brand">
-      <div class="brand-badge">🏠</div> سكن أفندي
-    </div>
+    <a href="index.html" class="brand">
+  <div class="brand-badge">🏠</div>
+  <span>سكن أفندي</span>
+</a>
+
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     <nav class="menu" id="menu">
       <a href="index.html">الرئيسية</a>
@@ -27,6 +29,7 @@
       <a href="commercial.html">محلات</a>
       <a href="car.html">سيارات</a>
       <a href="Foodstuffs.html">المواد الغذائيه</a>
+      <a href="mobil.html"> موبايلات</a>
       <a href="Devices.html">الاجهزه الكهربائية</a>
       <a href="clothes.html"> الملابس</a>
       <a href="Medical.html"> المستلزمات الطبيه</a>
