--- a/mobil.html
+++ b/mobil.html
@@ -60,7 +60,7 @@
 <!-- نفس كروت الشقق -->
 <section class="section">
   <div class="container">
-    <h2>سيتم اضافة ملابس قريبا   </h2>
+    <h2>سيتم اضافة الموبايلات قريبا   </h2>
     <div class="grid">
       
      
