--- a/apartments.html
+++ b/apartments.html
@@ -120,7 +120,7 @@
 
   <!-- 🔹 تفاصيل الشقة -->
   <div class="card-body">
-    <h5 class="card-title">بيع شقة في برج به أسانسير</h5>
+    <h5 class="card-title">ايجار شقة في برج به أسانسير ف -القرشيه</h5>
     <p class="card-text">شقة بموقع متميز بديروط القرشيه قريبة من الخدمات وبسعر ممتاز.</p>
     <p class="meta">الموقع: ديروط -القرشيه</p>
 
@@ -135,7 +135,7 @@
 <div class="card" 
      data-title="شقة ديروط  القرشيه" 
      data-meta="الموقع: ديروط - [حي حسام كيلاني]   "  
-     data-price="750,000 جنيه" 
+     data-price="6,000 جنيه" 
      data-status="متاحة">
 
   <!-- 🔹 صور الشقة (سلايدر) -->
@@ -155,8 +155,8 @@
   <!-- 🔹 تفاصيل الشقة -->
   <div class="card-body">
     <h5 class="card-title">بيع شقة في برج به أسانسير</h5>
-    <p class="card-text">شقة بموقع متميز بديروط القرشيه قريبة من الخدمات وبسعر ممتاز.</p>
-    <p class="meta">الموقع: ديروط -القرشيه</p>
+    <p class="card-text">شقة بموقع متميز بديروط حي حسان كيلاني قريبة من الخدمات وبسعر ممتاز.</p>
+    <p class="meta">الموقع: ديروط -حي حسام كيلاني</p>
 
     <!-- 🔹 زر الحجز -->
     <div class="card-actions">
