--- a/apartments.html
+++ b/apartments.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>شقق - سكن أفندي</title>
-  <meta name="description" content="سكن أفندي يوفر أفضل العروض للشقق للإيجار والبيع بمواقع مميزة وأسعار مناسبة. بيقدم مواد غذائيه .">
-<meta name="keywords" content="شقق, شقق للإيجار,شقق للبيع,  مواد غذائيه,مستلزمات طبيه,عربيات للبيع, اجهزه كهريائيه, سكن أفندي, سكن, عقارات">
-<meta name="author" content="سكن أفندي">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- العنوان (واحد بس) -->
+  <title>سكن أفندي | شقق للإيجار والبيع</title>
+
+  <!-- وصف الموقع لمحركات البحث -->
+  <meta name="description" content="سكن أفندي بيوفرلك شقق للإيجار والبيع، أراضي، محلات، مواد غذائية، مستلزمات طبية، موبايلات، أجهزة كهربائية وملابس.">
+
+  <!-- كلمات مفتاحية -->
+  <meta name="keywords" content="شقق, شقق للإيجار, شقق للبيع, مواد غذائية, مستلزمات طبية, عربيات للبيع, أجهزة كهربائية, سكن أفندي, عقارات, محلات">
+  <meta name="author" content="سكن أفندي">
+
+  <!-- Open Graph (الصورة والوصف للسوشيال ميديا + جوجل) -->
+  <meta property="og:title" content="سكن أفندي | شقق للإيجار والبيع">
+  <meta property="og:description" content="سكن أفندي بيوفرلك شقق للبيع والإيجار + أراضي + محلات + مواد غذائية + مستلزمات طبية + موبايلات + أجهزة كهربائية + ملابس.">
+  <meta property="og:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
+  <meta property="og:url" content="https://sakan-afandy.github.io/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="سكن أفندي | شقق للإيجار والبيع">
+  <meta name="twitter:description" content="سكن أفندي بيوفرلك كل احتياجاتك من شقق، محلات، مواد غذائية، مستلزمات طبية، موبايلات وأجهزة كهربائية.">
+  <meta name="twitter:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+
+  <!-- ملف CSS -->
   <link rel="stylesheet" href="style.css">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5576405028824306"
-     crossorigin="anonymous"></script>
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5576405028824306" crossorigin="anonymous"></script>
 </head>
 <body>
 
