--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="سكن أفندي | شقق للإيجار والبيع">
   <meta name="twitter:description" content="سكن أفندي بيوفرلك كل احتياجاتك من شقق، محلات، مواد غذائية، مستلزمات طبية، موبايلات وأجهزة كهربائية.">
-  <meta name="twitter:image" content="https://yourdomain.com/logo.jpg">
+  <meta name="twitter:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
