--- a/apartments.html
+++ b/apartments.html
@@ -192,6 +192,146 @@
   </div>
 </div>
 
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="شقة ديروط  ابو جبل" 
+     data-meta="الموقع: ديروط - [  ابو جبل]   "  
+     data-price="2,000,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="شقق/لقطة شاشة 2025-08-21 045425.png" class="slider-img active" alt="صورة 1">
+    <img src="شقق/لقطة شاشة 2025-08-21 050056.png" class="slider-img" alt="صورة 2">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">2,000,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title">بيع شقة في ابو جبل</h5>
+    <p class="card-text">شقة بموقع متميز بديروط ابو جبل قريبة من الخدمات وبسعر ممتاز.</p>
+    <p class="meta">الموقع: ديروط - ابوجبل</p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
+
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="شقة ديروط  ابو جبل" 
+     data-meta="الموقع: ديروط - [ابو جبل  ]   "  
+     data-price="3,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="شقق/لقطة شاشة 2025-08-21 052221.png" class="slider-img active" alt="صورة 1">
+    <img src="شقق//لقطة شاشة 2025-08-21 052413.png" class="slider-img" alt="صورة 2">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">3,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title">ايجار شقة في ابو جبل</h5>
+    <p class="card-text">شقة بموقع متميز بديروط ابو جبل قريبة من الخدمات وبسعر ممتاز.</p>
+    <p class="meta">الموقع: ديروط - ابوجبل</p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
+
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="بيت ديروط القرشيه" 
+     data-meta="الموقع: ديروط - [ القرشيه  ]   "  
+     data-price="3,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="شقق/لقطة شاشة 2025-08-21 054242.png" class="slider-img active" alt="صورة 1">
+    <img src="شقق/لقطة شاشة 2025-08-21 054015.png" class="slider-img" alt="صورة 2">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">800,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title">بيع بيت دورين ف القرشيه</h5>
+    <p class="card-text">شقة بموقع متميز بديروط ابو جبل قريبة من الخدمات وبسعر ممتاز.</p>
+    <p class="meta">الموقع: ديروط - القرشيه</p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
+
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="شقه للبع اسيوط المحطه" 
+     data-meta="الموقع: اسيوط - [ المحطه  ]   "  
+     data-price="650,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="شقق/لقطة شاشة 2025-08-21 060300.png" class="slider-img active" alt="صورة 1">
+    <img src="شقق/لقطة شاشة 2025-08-21 060606.png" class="slider-img" alt="صورة 2">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">650,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title">   شقه للبيع اوضه وصاله  </h5>
+    <p class="card-text">شقة بموقع متميز باسيوط قريبه  من الخدمات وبسعر ممتاز.</p>
+    <p class="meta">الموقع: اسيوط - المحطه</p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
+
 
       
     </div>
